# BP_Network

./: CMakeLists.txt  README.md  main.cpp
Network/: data.cpp  data.h  functor.cpp  functor.h  layer.cpp  layer.h  mnist_loader.cpp  mnist_loader.h  network.cpp  network.h  sigmoid.cpp  sigmoid.h
